--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,132 @@
+LAYOUT DO MENU PRINCIPAL
+
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="94dp"
+        android:text="Caldeira" 
+        android:onClick="abriSetorCaldeira"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/button1"
+        android:text="Moenda"
+        android:onClick="abriSetorMoenda" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/button2"
+        android:text="Fábrica de Açúcar" 
+        android:onClick="abriSetorFabrica"/>
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button3"
+        android:layout_centerHorizontal="true"
+        android:text="Cadastrar" 
+        android:onClick="abrirCadastrar"/>
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button4"
+        android:layout_centerHorizontal="true"
+        android:text="Sair" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:text="@string/varMenu1"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_centerHorizontal="true"
+        android:text="@string/varSelecionar" />
+   
+</RelativeLayout>
+
+
+
+
+CLASSE MENU PRINCIPAL EM JAVA
+
+package com.br.mvh;l
+
+import android.app.Activity;
+import android.content.Intent;
+import android.os.Bundle;
+import android.view.View;
+
+
+
+
+public class Main_tela extends Activity {
+	
+	
+	public void onCreate(Bundle savedInstanceState){
+		super.onCreate(savedInstanceState);
+		setContentView(R.layout.menuprincipal);
+	
+	}
+	
+	public void abriSetorCaldeira(View v){
+		Intent i = new Intent();
+		i.setClass(this,Caldeira.class);
+		startActivity(i);
+		
+	}
+	
+	public void abriSetorMoenda(View v){
+		Intent i = new Intent();
+		i.setClass(this,Moenda.class);
+		startActivity(i);
+	
+	}
+	
+	public void abriSetorFabrica(View v){
+		Intent i = new Intent();
+		i.setClass(this,Fabrica.class);
+		startActivity(i);
+	
+	}
+	
+	public void abrirCadastrar(View v){
+		Intent i = new Intent();
+		i.setClass(this,Cadastrar.class);
+		startActivity(i);
+	
+	}
+	
+}
+	
+	
+LAYOUT DA TELA CALDEIRA
 
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -206,72 +335,11 @@
 
 
 
-
-
-
-MENU PRINCIPAL
-
-package com.br.mvh;l
-
-
-
-import android.app.Activity;
-import android.content.Intent;
-import android.os.Bundle;
-import android.view.View;
-
-
-
-
-public class Main_tela extends Activity {
-	
-	
-	public void onCreate(Bundle savedInstanceState){
-		super.onCreate(savedInstanceState);
-		setContentView(R.layout.menuprincipal);
-	
-	}
-	
-	public void abriSetorCaldeira(View v){
-		Intent i = new Intent();
-		i.setClass(this,Caldeira.class);
-		startActivity(i);
-		
-	}
-	
-	public void abriSetorMoenda(View v){
-		Intent i = new Intent();
-		i.setClass(this,Moenda.class);
-		startActivity(i);
-	
-	}
-	
-	public void abriSetorFabrica(View v){
-		Intent i = new Intent();
-		i.setClass(this,Fabrica.class);
-		startActivity(i);
-	
-	}
-	
-	public void abrirCadastrar(View v){
-		Intent i = new Intent();
-		i.setClass(this,Cadastrar.class);
-		startActivity(i);
-	
-	}
-	
-}
-	
-	
-
-	
-TELA CALDEIRA 
+CLASSE CALDEIRA EM JAVA
 
 package com.br.mvh;
 
-
 import java.io.File;
-
 import android.app.Activity;
 import android.app.AlertDialog;
 import android.app.Dialog;
@@ -367,6 +435,242 @@ public class Caldeira extends Activity {
 	}
 
 	
+
+LAYOUT TELA CADASTRAR
+
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
+    android:orientation="vertical" >
+
+  <ScrollView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentLeft="true"
+      android:layout_alignParentTop="true" >
+  
+  <RelativeLayout
+      android:layout_width="match_parent"
+      android:layout_height="483dp"
+      android:layout_alignParentBottom="true"
+      android:layout_alignParentLeft="true" >
+
+      <TextView
+          android:id="@+id/textView1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentTop="true"
+          android:layout_centerHorizontal="true"
+          android:layout_marginTop="19dp"
+          android:text="@string/cadSetor"
+          android:textSize="20sp" />
+
+      <TextView
+          android:id="@+id/textView3"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignLeft="@+id/textView2"
+          android:layout_below="@+id/textView2"
+          android:layout_marginTop="20dp"
+          android:text="@string/cadCampo1" />
+
+      <TextView
+          android:id="@+id/textView4"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignLeft="@+id/textView3"
+          android:layout_below="@+id/textView3"
+          android:layout_marginTop="20dp"
+          android:text="@string/cadCampo2" />
+
+      <TextView
+          android:id="@+id/textView5"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignRight="@+id/textView4"
+          android:layout_below="@+id/textView4"
+          android:layout_marginTop="20dp"
+          android:text="@string/cadCampo3" />
+
+      <TextView
+          android:id="@+id/textView6"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignLeft="@+id/textView5"
+          android:layout_below="@+id/textView5"
+          android:layout_marginTop="20dp"
+          android:text="@string/cadCampo4" />
+
+      <TextView
+          android:id="@+id/textView8"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignRight="@+id/textView7"
+          android:layout_below="@+id/textView7"
+          android:layout_marginTop="20dp"
+          android:text="@string/cadCampo6" />
+
+      <TextView
+          android:id="@+id/textView9"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignLeft="@+id/textView8"
+          android:layout_below="@+id/textView8"
+          android:layout_marginTop="20dp"
+          android:text="@string/cadCampo7" />
+
+      <TextView
+          android:id="@+id/textView7"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignLeft="@+id/textView6"
+          android:layout_below="@+id/textView6"
+          android:layout_marginTop="22dp"
+          android:text="@string/cadCampo5" />
+
+      <TextView
+          android:id="@+id/textView2"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentLeft="true"
+          android:layout_below="@+id/textView1"
+          android:layout_marginTop="33dp"
+          android:text="Nome do Setor" />
+
+      <TextView
+          android:id="@+id/textView10"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentLeft="true"
+          android:layout_below="@+id/textView9"
+          android:layout_marginTop="20dp"
+          android:text="@string/cadCampo8" />
+
+      <EditText
+          android:id="@+id/editText4"
+          android:layout_width="wrap_content"
+          android:layout_height="40dp"
+          android:layout_above="@+id/editText5"
+          android:layout_alignLeft="@+id/EditText01"
+          android:layout_alignParentRight="true"
+          android:layout_alignTop="@+id/textView6"
+          android:ems="10" />
+
+      <EditText
+          android:id="@+id/editText5"
+          android:layout_width="wrap_content"
+          android:layout_height="35dp"
+          android:layout_above="@+id/editText6"
+          android:layout_alignLeft="@+id/editText4"
+          android:layout_alignParentRight="true"
+          android:layout_alignTop="@+id/textView7"
+          android:ems="10" />
+
+      <EditText
+          android:id="@+id/editText6"
+          android:layout_width="wrap_content"
+          android:layout_height="35dp"
+          android:layout_above="@+id/editText7"
+          android:layout_alignLeft="@+id/editText5"
+          android:layout_alignParentRight="true"
+          android:layout_alignTop="@+id/textView8"
+          android:ems="10" />
+
+      <EditText
+          android:id="@+id/editText7"
+          android:layout_width="wrap_content"
+          android:layout_height="35dp"
+          android:layout_above="@+id/editText8"
+          android:layout_alignLeft="@+id/editText6"
+          android:layout_alignTop="@+id/textView9"
+          android:ems="10" />
+
+      <EditText
+          android:id="@+id/editText8"
+          android:layout_width="wrap_content"
+          android:layout_height="40dp"
+          android:layout_alignLeft="@+id/editText7"
+          android:layout_alignTop="@+id/textView10"
+          android:ems="10" />
+
+      <EditText
+          android:id="@+id/editText2"
+          android:layout_width="wrap_content"
+          android:layout_height="40dp"
+          android:layout_alignBaseline="@+id/textView3"
+          android:layout_alignBottom="@+id/textView3"
+          android:layout_alignParentRight="true"
+          android:layout_toRightOf="@+id/textView3"
+          android:ems="10" />
+
+      <EditText
+          android:id="@+id/editText1"
+          android:layout_width="match_parent"
+          android:layout_height="40dp"
+          android:layout_alignBaseline="@+id/textView2"
+          android:layout_alignBottom="@+id/textView2"
+          android:layout_toRightOf="@+id/textView3"
+          android:ems="10" />
+      
+      <EditText
+          android:id="@+id/editText3"
+          android:layout_width="wrap_content"
+          android:layout_height="40dp"
+          android:layout_alignBaseline="@+id/textView4"
+          android:layout_alignBottom="@+id/textView4"
+          android:layout_alignLeft="@+id/editText2"
+          android:layout_alignParentRight="true"
+          android:ems="10" />
+
+      <Button
+          android:id="@+id/button1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentBottom="true"
+          android:layout_alignParentRight="true"
+          android:layout_marginRight="18dp"
+      android:text="Salvar" />
+
+      <EditText
+          android:id="@+id/EditText01"
+          android:layout_width="match_parent"
+          android:layout_height="30dp"
+          android:layout_above="@+id/editText4"
+          android:layout_alignParentRight="true"
+          android:layout_alignRight="@+id/textView5"
+          android:layout_alignTop="@+id/textView5"
+          android:layout_toLeftOf="@+id/textView5"
+          android:layout_toRightOf="@+id/textView5"
+          android:ems="10" >
+
+          <requestFocus />
+      </EditText>
+      
+  </RelativeLayout>
+</ScrollView>
+
+ 
+</RelativeLayout>
+
+
+
+
+CLASS  CADASTRAR EM JAVA
+
+package com.br.mvh;
+
+import android.app.Activity;
+import android.os.Bundle;
+
+public class Cadastrar extends Activity {
+
+	public void onCreate (Bundle savedInstanceState){
+		super.onCreate(savedInstanceState);
+		setContentView(R.layout.tela5cadastrar);
+	}
+}
 
 	 
 
